--- a/ripples.html
+++ b/ripples.html
@@ -31,13 +31,28 @@
 
     <hr>
 
-    <div class="creaciones">
+    <div class="ripples-text">
 
-        <a href="quarry.html"><img src="images/quarry (3).jpg"></a>
-        <a href="ripples.html"><img src="images/ripples (4).jpg"></a>
-        <a href="nebula.html"><img src="images/nebula (3).jpg"></a>
-        <!-- <a href="images/quarry (4).jpg"><img src="images/quarry (4).jpg"></a> -->
+        <h3>Ripples - Mesa Auxiliar</h3>
+        <h5>Acero pavonado, acero inoxidable pulido, mármol negro marquina.</h5>
 
+    </div>
+
+    <div class="ripples">
+
+        <!-- <img src="images/ripple (1).jpg"> 
+		<img src="images/ripple (2).jpg">
+		<img src="images/ripple (3).jpg">
+		<img src="images/ripple (4).jpg">
+		<img src="images/ripple (5).jpg">
+		<img src="images/ripple (6).jpg"> -->
+
+		<a href="images/ripples (1).jpg"><img src="images/ripples (1).jpg"></a>
+        <a href="images/ripples (2).jpg"><img src="images/ripples (2).jpg"></a>
+        <a href="images/ripples (3).jpg"><img src="images/ripples (3).jpg"></a>
+        <a href="images/ripples (4).jpg"><img src="images/ripples (4).jpg"></a>
+        <a href="images/ripples (5).jpg"><img src="images/ripples (5).jpg"></a>
+        <a href="images/ripples (6).jpg"><img src="images/ripples (6).jpg"></a>
     
       </div>
 
