--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
         <title>Meloni Sferco</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+        <link rel="icon" type="image/png" href="images/favicon.png"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -20,13 +21,15 @@
 		</div>
 		<nav>
 			<ul>
-                <li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
-				<li><a href="creaciones.html">Creaciones</a></li>
-				<li><a href="about.html">About</a></li>
+                <li><a href="creaciones.html">Creaciones</a></li>
+				<li><a href="about.html">Acerca de</a></li>
 				<li><a href="contact.html">Contacto</a></li>
+                <li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
 			</ul>
 		</nav>
 	</header>
+
+    <hr>
 
     <section class="about">
         <div class="about-img">
