--- a/about.html
+++ b/about.html
@@ -41,11 +41,11 @@
                 Desde joven, aprendió el valor de la precisión gracias a su papá, quien se dedica a la fabricación 
                 y mantenimiento de intercambiadores de calor, y a su abuelo materno, quien se enfocaba en la fabricación 
                 de repuestos para embragues de autos.
-                Luego de estudiar Ingeniería Industrial, José Ignacio desarrolló una pasión por el trabajo manual 
-                y aprendió a utilizar softwares paramétricos tipo CAD, los cuales le permiten obtener modelos precisos 
+                Luego de estudiar Ingeniería Industrial, José Ignacio desarrolló una pasión por el trabajo manual.
+                Aprendió a utilizar softwares paramétricos tipo CAD, los cuales le permiten obtener modelos precisos 
                 y dibujos técnicos. Además, también domina softwares de modelado basado en polígonos, los cuales utiliza 
                 para prototipos y para crear renders realistas del producto final.                
-                A pesar de no poseer estudios en arte y diseño, José Ignacio se destaca por crear piezas 
+                El hecho de no poseer estudios en arte y diseño, le permite a José Ignacio crear piezas 
                 únicas sin restricciones, esculpiendo los materiales disponibles en su taller. Trabaja con metales ferrosos y 
                 no ferrosos, mármoles y piedras semipreciosas. Sus creaciones muestran referencias geológicas y planetarias.
         </p>
