--- a/nebula.html
+++ b/nebula.html
@@ -34,17 +34,13 @@
     <div class="nebula-text">
 
         <h3>Nebula - Mesa Auxiliar</h3>
-        <h5>Acero pavonado, bronce pulido, bronce patinado.</h5>
+        <h5>Acero pavonado. Bronce pulido. Bronce patinado.</h5>
+        <h5>Ø 42 cm | Altura: 65 cm</h5>
+        <h5>DISPONIBLE</h5>
 
     </div>
 
     <div class="nebula">
-
-        <!-- <img src="images/nebula (1).jpg"> 
-		<img src="images/nebula (2).jpg">
-		<img src="images/nebula (3).jpg">
-		<img src="images/nebula (4).jpg">
-		<img src="images/nebula (5).jpg"> -->
 
         <a href="images/nebula (3).jpg"><img src="images/nebula (3).jpg"></a>
         <a href="images/nebula (2).jpg"><img src="images/nebula (2).jpg"></a>
