--- a/quarry.html
+++ b/quarry.html
@@ -34,18 +34,13 @@
     <div class="quarry-text">
 
         <h3>Quarry - Mesa Auxiliar</h3>
-        <h5>Aluminio pulido, bronce pulido, mármol pulido/natural.</h5>
+        <h5>Aluminio pulido. Bronce pulido. Mármol pulido/natural.</h5>
+        <h5>Ø 36 cm | Altura: 54 cm</h5>
+        <h5>DISPONIBLE</h5>
 
     </div>
 
     <div class="quarry">
-
-        <!-- <img src="images/quarry (1).jpg"> 
-		<img src="images/quarry (2).jpg">
-		<img src="images/quarry (3).jpg">
-		<img src="images/quarry (4).jpg">
-		<img src="images/quarry (5).jpg">
-		<img src="images/quarry (6).jpg"> -->
         
         <a href="images/quarry (3).jpg"><img src="images/quarry (3).jpg"></a>
         <a href="images/quarry (5).jpg"><img src="images/quarry (5).jpg"></a>
