--- a/ripples.html
+++ b/ripples.html
@@ -34,18 +34,13 @@
     <div class="ripples-text">
 
         <h3>Ripples - Mesa Auxiliar</h3>
-        <h5>Acero pavonado, acero inoxidable pulido, mármol negro marquina.</h5>
+        <h5>Acero pavonado. Acero inoxidable pulido. Mármol negro marquina pulido.</h5>
+        <h5>Ø 61 cm | Altura: 46 cm</h5>
+        <h5>DISPONIBLE</h5>
 
     </div>
 
     <div class="ripples">
-
-        <!-- <img src="images/ripple (1).jpg"> 
-		<img src="images/ripple (2).jpg">
-		<img src="images/ripple (3).jpg">
-		<img src="images/ripple (4).jpg">
-		<img src="images/ripple (5).jpg">
-		<img src="images/ripple (6).jpg"> -->
 
         <a href="images/ripples (4).jpg"><img src="images/ripples (4).jpg"></a>
         <a href="images/ripples (3).jpg"><img src="images/ripples (3).jpg"></a>
