--- a/ripples.html
+++ b/ripples.html
@@ -35,7 +35,7 @@
 
         <h3>Ripples - Mesa Auxiliar</h3>
         <h5>Acero pavonado. Acero inoxidable pulido. Mármol negro marquina pulido.</h5>
-        <h5>Ø 61 cm | Altura: 46 cm</h5>
+        <h5>Ø 61 cm | Alto: 46 cm</h5>
         <h5>DISPONIBLE</h5>
 
     </div>
