--- a/magma.html
+++ b/magma.html
@@ -31,13 +31,23 @@
 
     <hr>
 
-    <div class="creaciones">
+    <div class="quarry-text">
 
-        <a href="quarry.html"><img src="images/quarry (3).jpg"></a>
-        <a href="nebula.html"><img src="images/nebula (3).jpg"></a>
-        <a href="magma.html"><img src="images/magma (5).jpg"></a>
-        <a href="ripples.html"><img src="images/ripples (4).jpg"></a>
+        <h3>Magma - Espejo</h3>
+        <h5>Aluminio pulido. Bronce pulido. Ojo de Tigre.</h5>
+        <h5>Alto: 64 cm | Ancho: 82 cm</h5>
+        <h5>DISPONIBLE</h5>
 
+    </div>
+
+    <div class="quarry">
+        
+        <a href="images/magma (5).jpg"><img src="images/magma (5).jpg"></a>
+		<a href="images/magma (1).jpg"><img src="images/magma (1).jpg"></a>
+        <a href="images/magma (2).jpg"><img src="images/magma (2).jpg"></a>
+        <a href="images/magma (4).jpg"><img src="images/magma (4).jpg"></a>
+        <a href="images/magma (6).jpg"><img src="images/magma (6).jpg"></a>
+        <a href="images/magma (3).jpg"><img src="images/magma (3).jpg"></a>
     
       </div>
 
