--- a/quarry.html
+++ b/quarry.html
@@ -35,7 +35,7 @@
 
         <h3>Quarry - Mesa Auxiliar</h3>
         <h5>Aluminio pulido. Bronce pulido. Mármol pulido/natural.</h5>
-        <h5>Ø 36 cm | Altura: 54 cm</h5>
+        <h5>Ø 36 cm | Alto: 54 cm</h5>
         <h5>DISPONIBLE</h5>
 
     </div>
