--- a/about.html
+++ b/about.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF=8" />
-        <title>Meloni Sferco</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-        <link rel="icon" type="image/png" href="images/favicon.png"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+	<meta charset="UTF=8" />
+	<title>Meloni Sferco</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+	<link rel="icon" type="image/png" href="images/favicon.png"/>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    </head>
+</head>
 <body>
+	<header>
 
-    <header>
-		<div class="logo">
-			<a href="index.html">
-				<img src="images/logo.png">
+		<input id="toggle" type="checkbox"></input>
+
+		<label for="toggle" class="hamburger">
+			<div class="top-bun"></div>
+			<div class="meat"></div>
+			<div class="bottom-bun"></div>
+		</label>
+		
+		<div class="menu">
+			<div class="menu-wrapper">
+			<nav>
+				<!-- <a href="creaciones.html">Creaciones</a><br>
+				<a href="about.html">Acerca de</a><br>
+				<a href="contact.html">Contacto</a><br>
+				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
+
+				<h3><a href="index.html">MELONI &nbsp SFERCO</a></h3>
+				<h5><a href="creaciones.html">Creaciones</a></h5>
+				<h5><a href="about.html">Acerca de</a></h5>
+				<h5><a href="contact.html">Contacto</a></h5>
+				<h5><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></h5>
+			</nav>
+			</div>
+		</div>
+
+		<div class="logo"> 
+			<a href="index.html">MELONI &nbsp SFERCO</a>
 		</div>
 		<nav>
 			<ul>
-                <li><a href="creaciones.html">Creaciones</a></li>
+				<li><a href="creaciones.html">Creaciones</a></li>
 				<li><a href="about.html">Acerca de</a></li>
 				<li><a href="contact.html">Contacto</a></li>
-                <li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
+				<li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
 			</ul>
 		</nav>
 	</header>
 
-    <hr>
+    <!-- <hr> -->
 
     <section class="about">
         <div class="about-img">
