--- a/index.html
+++ b/index.html
@@ -14,17 +14,41 @@
 </head>
 <body>
 	<header>
-		<div class="logo">
-			<a href="index.html">
-				<img src="images/logo.png">
-			   </a>
+
+		<input id="toggle" type="checkbox"></input>
+
+		<label for="toggle" class="hamburger">
+			<div class="top-bun"></div>
+			<div class="meat"></div>
+			<div class="bottom-bun"></div>
+		</label>
+		
+		<div class="menu">
+			<div class="menu-wrapper">
+			<nav>
+				<!-- <a href="creaciones.html">Creaciones</a><br>
+				<a href="about.html">Acerca de</a><br>
+				<a href="contact.html">Contacto</a><br>
+				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
+
+				<h3><a href="index.html">MELONI &nbsp SFERCO</a></h3>
+				<h5><a href="creaciones.html">Creaciones</a></h5>
+				<h5><a href="about.html">Acerca de</a></h5>
+				<h5><a href="contact.html">Contacto</a></h5>
+				<h5><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></h5>
+			</nav>
+			</div>
+		</div>
+
+		<div class="logo"> 
+			<a href="index.html">MELONI &nbsp SFERCO</a>
 		</div>
 		<nav>
 			<ul>
 				<li><a href="creaciones.html">Creaciones</a></li>
 				<li><a href="about.html">Acerca de</a></li>
 				<li><a href="contact.html">Contacto</a></li>
-                <li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
+				<li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
 			</ul>
 		</nav>
 	</header>
