--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
 
 				<h3><a href="index.html">MELONI &nbsp SFERCO</a></h3>
-				<h5><a href="creaciones.html">Creaciones</a></h5>
+				<h5><a href="creaciones.html">Colección</a></h5>
 				<h5><a href="about.html">Acerca de</a></h5>
 				<h5><a href="contact.html">Contacto</a></h5>
 				<h5><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></h5>
