--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 		<div class="menu">
 			<div class="menu-wrapper">
 			<nav>
-				<!-- <a href="creaciones.html">Creaciones</a><br>
+				<!-- <a href="creaciones.html">Colección</a><br>
 				<a href="about.html">Acerca de</a><br>
 				<a href="contact.html">Contacto</a><br>
 				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
@@ -46,7 +46,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="creaciones.html">Creaciones</a></li>
+				<li><a href="creaciones.html">Colección</a></li>
 				<li><a href="about.html">Acerca de</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 				<li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
