--- a/magma.html
+++ b/magma.html
@@ -27,13 +27,13 @@
 		<div class="menu">
 			<div class="menu-wrapper">
 			<nav>
-				<!-- <a href="creaciones.html">Creaciones</a><br>
+				<!-- <a href="creaciones.html">Colección</a><br>
 				<a href="about.html">Acerca de</a><br>
 				<a href="contact.html">Contacto</a><br>
 				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
 
 				<h3><a href="index.html">MELONI &nbsp SFERCO</a></h3>
-				<h5><a href="creaciones.html">Creaciones</a></h5>
+				<h5><a href="creaciones.html">Colección</a></h5>
 				<h5><a href="about.html">Acerca de</a></h5>
 				<h5><a href="contact.html">Contacto</a></h5>
 				<h5><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></h5>
@@ -46,7 +46,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="creaciones.html">Creaciones</a></li>
+				<li><a href="creaciones.html">Colección</a></li>
 				<li><a href="about.html">Acerca de</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 				<li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
