--- a/ripples.html
+++ b/ripples.html
@@ -5,12 +5,11 @@
 	<title>Meloni Sferco</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-	<link rel="icon" type="image/png" href="images/favicon.png"/>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/x-icon" href="/images/favicon.png">
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 </head>
 <body>
@@ -27,13 +26,13 @@
 		<div class="menu">
 			<div class="menu-wrapper">
 			<nav>
-				<!-- <a href="creaciones.html">Colección</a><br>
+				<!-- <a href="creaciones.html">Creaciones</a><br>
 				<a href="about.html">Acerca de</a><br>
 				<a href="contact.html">Contacto</a><br>
 				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
 
 				<h3><a href="index.html">MELONI &nbsp SFERCO</a></h3>
-				<h5><a href="creaciones.html">Colección</a></h5>
+				<h5><a href="creaciones.html">Creaciones</a></h5>
 				<h5><a href="about.html">Acerca de</a></h5>
 				<h5><a href="contact.html">Contacto</a></h5>
 				<h5><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></h5>
@@ -46,7 +45,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="creaciones.html">Colección</a></li>
+				<li><a href="creaciones.html">Creaciones</a></li>
 				<li><a href="about.html">Acerca de</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 				<li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
