--- a/about.html
+++ b/about.html
@@ -70,8 +70,9 @@
                 y dibujos técnicos. Además, también utiliza softwares de modelado basado en polígonos, los cuales utiliza 
                 para prototipos y para crear renders realistas del producto final.                
                 El hecho de no poseer estudios en arte y diseño, le permite a José Ignacio crear piezas 
-                únicas sin restricciones, esculpiendo los materiales disponibles en su taller. Trabaja con metales ferrosos y 
-                no ferrosos, mármoles y piedras semipreciosas. Sus creaciones muestran referencias geológicas y planetarias.
+        	únicas sin restricciones, esculpiendo los materiales disponibles en su taller. Trabaja con aluminio, latón, 
+		bronce, vidrio fundido, mármoles y piedras semipreciosas. Sus inspiraciones en joyería y geología se 
+		ven expresadas en sus creaciones.
         </p>
         </div>
     </section>
