--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                 para prototipos y para crear renders realistas del producto final.                
                 El hecho de no poseer estudios en arte y diseño, le permite a José Ignacio crear piezas 
         	únicas sin restricciones, esculpiendo los materiales disponibles en su taller. Trabaja con aluminio, latón, 
-		bronce, vidrio fundido, mármoles y piedras semipreciosas. Sus inspiraciones en joyería y geología se 
+		bronce, vidrio fundido, mármoles y piedras semipreciosas. Sus inspiraciones planetarias, geológicas y en joyeria se 
 		ven expresadas en sus creaciones.
         </p>
         </div>
