--- a/about.html
+++ b/about.html
@@ -26,13 +26,13 @@
 		<div class="menu">
 			<div class="menu-wrapper">
 			<nav>
-				<!-- <a href="creaciones.html">Colección</a><br>
+				<!-- <a href="coleccion.html">coleccion</a><br>
 				<a href="about.html">Acerca de</a><br>
 				<a href="contact.html">Contacto</a><br>
 				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
 
 				<h3><a href="index.html">MELONI &nbsp SFERCO</a></h3>
-				<h5><a href="creaciones.html">Colección</a></h5>
+				<h5><a href="coleccion.html">Colección</a></h5>
 				<h5><a href="about.html">Acerca de</a></h5>
 				<h5><a href="contact.html">Contacto</a></h5>
 				<h5><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></h5>
@@ -45,7 +45,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="creaciones.html">Colección</a></li>
+				<li><a href="coleccion.html">Colección</a></li>
 				<li><a href="about.html">Acerca de</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 				<li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
@@ -70,9 +70,9 @@
                 y dibujos técnicos. Además, también utiliza softwares de modelado basado en polígonos, los cuales utiliza 
                 para prototipos y para crear renders realistas del producto final.                
                 El hecho de no poseer estudios en arte y diseño, le permite a José Ignacio crear piezas 
-        	únicas sin restricciones, esculpiendo los materiales disponibles en su taller. Trabaja con aluminio, latón, 
-		bronce, vidrio fundido, mármoles y piedras semipreciosas. Sus inspiraciones planetarias, geológicas y en joyeria se 
-		ven expresadas en sus creaciones.
+        		únicas sin restricciones, esculpiendo los materiales disponibles en su taller. Trabaja aluminio, latón, 
+				bronce, vidrio fundido, mármol y piedras semipreciosas. Sus inspiraciones planetarias, geológicas y en joyeria se 
+				ven expresadas en sus creaciones.
         </p>
         </div>
     </section>
