--- a/coleccion.html
+++ b/coleccion.html
@@ -55,22 +55,17 @@
 
     <!-- <hr> -->
 
-    <div class="producto-text">
+    <div class="coleccion">
 
-        <h3>Ripples - Mesa Auxiliar</h3>
-        <h5>Acero pavonado. Acero inoxidable pulido. Mármol negro marquina pulido.</h5>
-        <h5>Ø 61 cm | Alto: 46 cm</h5>
+		<a href="de_la_luna.html"><img src="images/de_la_luna (5).jpg"></a>
+		<a href="ice_stars.html"><img src="images/ice_stars (3).jpg"></a>
+        <a href="quarry.html"><img src="images/quarry (3).jpg"></a>
+        <a href="magma.html"><img src="images/magma (5).jpg"></a>
+		<a href="candelabros.html"><img src="images/candelabros (3).jpg"></a>
+		<a href="posavasos.html"><img src="images/posavasos (2).jpg"></a>
+        <a href="nebula.html"><img src="images/nebula (3).jpg"></a>
+        <a href="ripples.html"><img src="images/ripples (4).jpg"></a>
 
-    </div>
-
-    <div class="producto">
-
-        <a href="images/ripples (4).jpg"><img src="images/ripples (4).jpg"></a>
-        <a href="images/ripples (3).jpg"><img src="images/ripples (3).jpg"></a>
-        <a href="images/ripples (2).jpg"><img src="images/ripples (2).jpg"></a>
-		<a href="images/ripples (1).jpg"><img src="images/ripples (1).jpg"></a>
-        <a href="images/ripples (5).jpg"><img src="images/ripples (5).jpg"></a>
-        <a href="images/ripples (6).jpg"><img src="images/ripples (6).jpg"></a>
     
       </div>
 
