--- a/de_la_luna.html
+++ b/de_la_luna.html
@@ -57,20 +57,20 @@
 
     <div class="producto-text">
 
-        <h3>Ripples - Mesa Auxiliar</h3>
-        <h5>Acero pavonado. Acero inoxidable pulido. Mármol negro marquina pulido.</h5>
-        <h5>Ø 61 cm | Alto: 46 cm</h5>
+        <h3>De La Luna - Mesa Auxiliar</h3>
+        <h5>Aluminio texturado y pulido. Agata.</h5>
+        <h5>Ø: 38 cm | Alto: 60 cm</h5>
 
     </div>
 
     <div class="producto">
-
-        <a href="images/ripples (4).jpg"><img src="images/ripples (4).jpg"></a>
-        <a href="images/ripples (3).jpg"><img src="images/ripples (3).jpg"></a>
-        <a href="images/ripples (2).jpg"><img src="images/ripples (2).jpg"></a>
-		<a href="images/ripples (1).jpg"><img src="images/ripples (1).jpg"></a>
-        <a href="images/ripples (5).jpg"><img src="images/ripples (5).jpg"></a>
-        <a href="images/ripples (6).jpg"><img src="images/ripples (6).jpg"></a>
+        
+        <a href="images/de_la_luna (5).jpg"><img src="images/de_la_luna (5).jpg"></a>
+        <a href="images/de_la_luna (6).jpg"><img src="images/de_la_luna (6).jpg"></a>
+        <a href="images/de_la_luna (4).jpg"><img src="images/de_la_luna (4).jpg"></a>
+        <a href="images/de_la_luna (3).jpg"><img src="images/de_la_luna (3).jpg"></a>
+		<a href="images/de_la_luna (1).jpg"><img src="images/de_la_luna (1).jpg"></a>
+        <a href="images/de_la_luna (2).jpg"><img src="images/de_la_luna (2).jpg"></a>
     
       </div>
 
