--- a/nebula.html
+++ b/nebula.html
@@ -26,13 +26,13 @@
 		<div class="menu">
 			<div class="menu-wrapper">
 			<nav>
-				<!-- <a href="creaciones.html">Colección</a><br>
+				<!-- <a href="coleccion.html">coleccion</a><br>
 				<a href="about.html">Acerca de</a><br>
 				<a href="contact.html">Contacto</a><br>
 				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
 
 				<h3><a href="index.html">MELONI &nbsp SFERCO</a></h3>
-				<h5><a href="creaciones.html">Colección</a></h5>
+				<h5><a href="coleccion.html">Colección</a></h5>
 				<h5><a href="about.html">Acerca de</a></h5>
 				<h5><a href="contact.html">Contacto</a></h5>
 				<h5><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></h5>
@@ -45,7 +45,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="creaciones.html">Colección</a></li>
+				<li><a href="coleccion.html">Colección</a></li>
 				<li><a href="about.html">Acerca de</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 				<li><a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a></li>
@@ -55,7 +55,7 @@
 
     <!-- <hr> -->
 
-    <div class="nebula-text">
+    <div class="producto-text">
 
         <h3>Nebula - Mesa Auxiliar</h3>
         <h5>Acero pavonado. Bronce pulido. Bronce patinado.</h5>
@@ -63,7 +63,7 @@
 
     </div>
 
-    <div class="nebula">
+    <div class="producto">
 
         <a href="images/nebula (3).jpg"><img src="images/nebula (3).jpg"></a>
         <a href="images/nebula (2).jpg"><img src="images/nebula (2).jpg"></a>
