--- a/ice_ice.html
+++ b/ice_ice.html
@@ -55,17 +55,22 @@
 
     <!-- <hr> -->
 
-    <div class="coleccion">
+    <div class="producto-text">
 
-		<a href="de_la_luna.html"><img src="images/de_la_luna (5).jpg"></a>
-		<a href="ice_ice.html"><img src="images/ice_ice (3).jpg"></a>
-        <a href="quarry.html"><img src="images/quarry (3).jpg"></a>
-        <a href="magma.html"><img src="images/magma (5).jpg"></a>
-		<a href="candelabros.html"><img src="images/candelabros (3).jpg"></a>
-		<a href="posavasos.html"><img src="images/posavasos (2).jpg"></a>
-        <a href="nebula.html"><img src="images/nebula (3).jpg"></a>
-        <a href="ripples.html"><img src="images/ripples (4).jpg"></a>
+        <h3>Ice Ice - Mesa Auxiliar</h3>
+        <h5>Aluminio pulido. Bronce pulido. Vidrio cristalino fundido.</h5>
+        <h5>Ø: 32 cm | Alto: 62 cm</h5>
 
+    </div>
+
+    <div class="producto">
+        
+        <a href="images/ice_ice (3).jpg"><img src="images/ice_ice (3).jpg"></a>
+        <a href="images/ice_ice (6).jpg"><img src="images/ice_ice (6).jpg"></a>
+        <a href="images/ice_ice (4).jpg"><img src="images/ice_ice (4).jpg"></a>
+        <a href="images/ice_ice (5).jpg"><img src="images/ice_ice (5).jpg"></a>
+		<a href="images/ice_ice (1).jpg"><img src="images/ice_ice (1).jpg"></a>
+        <a href="images/ice_ice (2).jpg"><img src="images/ice_ice (2).jpg"></a>
     
       </div>
 
