--- a/coleccion.html
+++ b/coleccion.html
@@ -55,17 +55,31 @@
 
     <!-- <hr> -->
 
-  	<div class="coleccion">
+    <div class="coleccion">
 
-		<a href="de_la_luna.html"><img src="images/de_la_luna (5).jpg"></a>
-		<a href="ice_ice.html"><img src="images/ice_ice (3).jpg"></a>
-	        <a href="quarry.html"><img src="images/quarry (3).jpg"></a>
-	        <a href="magma.html"><img src="images/magma (5).jpg"></a>
-		<a href="candelabros.html"><img src="images/candelabros (3).jpg"></a>
-		<a href="posavasos.html"><img src="images/posavasos (2).jpg"></a>
-	        <a href="nebula.html"><img src="images/nebula (3).jpg"></a>
+		<div class="de_la_luna">
+			<a href="de_la_luna.html"><img src="images/de_la_luna (1).jpg"></a>
+		</div>
+		<div class="ice_ice">
+			<a href="ice_ice.html"><img src="images/ice_ice (6).jpg"></a>
+		</div>
+		<div class="quarry">
+        	<a href="quarry.html"><img src="images/quarry (6).jpg"></a>
+		</div>
+		<div class="magma">
+        	<a href="magma.html"><img src="images/magma (1).jpg"></a>
+		</div>
+		<div class="candelabros">
+			<a href="candelabros.html"><img src="images/candelabros (1).jpg"></a>
+		</div>
+		<div class="posavasos">
+			<a href="posavasos.html"><img src="images/posavasos (2).jpg"></a>
+		</div>
+		<div class="nebula">
+       		<a href="nebula.html"><img src="images/nebula (1).jpg"></a>
+		</div>
 
-	</div>
+    </div>
 
 </body>
 </html>
