--- a/candelabro_pie.html
+++ b/candelabro_pie.html
@@ -57,23 +57,17 @@
 
     <div class="producto-text">
 
-        <h3>Ice Ice - Mesa Auxiliar</h3>
-        <h5>Aluminio pulido. Bronce pulido. Vidrio cristalino fundido.</h5>
-        <h5>Ø: 32 cm | Alto: 62 cm</h5>
+        <h3>Candelabros</h3>
+        <h5>Aluminio texturado y pulido.</h5>
+        <h5>Alto: 130 cm</h5>
 
     </div>
 
     <div class="producto">
-        
-		<a href="images/ice_ice (7).jpg"><img src="images/ice_ice (7).jpg"></a>
-		<a href="images/ice_ice (8).jpg"><img src="images/ice_ice (8).jpg"></a>
-		<a href="images/ice_ice (9).jpg"><img src="images/ice_ice (9).jpg"></a>
-        <a href="images/ice_ice (3).jpg"><img src="images/ice_ice (3).jpg"></a>
-        <a href="images/ice_ice (6).jpg"><img src="images/ice_ice (6).jpg"></a>
-        <a href="images/ice_ice (4).jpg"><img src="images/ice_ice (4).jpg"></a>
-        <a href="images/ice_ice (5).jpg"><img src="images/ice_ice (5).jpg"></a>
-		<a href="images/ice_ice (1).jpg"><img src="images/ice_ice (1).jpg"></a>
-        <a href="images/ice_ice (2).jpg"><img src="images/ice_ice (2).jpg"></a>
+		
+		<a href="images/candelabro_pie (2).jpg"><img src="images/candelabro_pie (2).jpg"></a>
+        <a href="images/candelabro_pie (3).jpg"><img src="images/candelabro_pie (3).jpg"></a>
+        <a href="images/candelabro_pie (1).jpg"><img src="images/candelabro_pie (1).jpg"></a>
     
       </div>
 
