--- a/coleccion.html
+++ b/coleccion.html
@@ -58,19 +58,22 @@
     <div class="coleccion">
 
 		<div class="de_la_luna">
-			<a href="de_la_luna.html"><img src="images/de_la_luna (1).jpg"></a>
+			<a href="de_la_luna.html"><img src="images/de_la_luna (9).jpg"></a>
 		</div>
 		<div class="ice_ice">
-			<a href="ice_ice.html"><img src="images/ice_ice (6).jpg"></a>
+			<a href="ice_ice.html"><img src="images/ice_ice (9).jpg"></a>
 		</div>
 		<div class="quarry">
-        	<a href="quarry.html"><img src="images/quarry (6).jpg"></a>
+        	<a href="quarry.html"><img src="images/quarry (7).jpg"></a>
 		</div>
 		<div class="magma">
         	<a href="magma.html"><img src="images/magma (1).jpg"></a>
 		</div>
+		<div class="candelabro_pie">
+			<a href="candelabro_pie.html"><img src="images/candelabro_pie (2).jpg"></a>
+		 </div>
 		<div class="candelabros">
-			<a href="candelabros.html"><img src="images/candelabros (1).jpg"></a>
+			<a href="candelabros.html"><img src="images/candelabros (6).jpg"></a>
 		</div>
 		<div class="posavasos">
 			<a href="posavasos.html"><img src="images/posavasos (2).jpg"></a>
