--- a/de_la_luna.html
+++ b/de_la_luna.html
@@ -65,6 +65,9 @@
 
     <div class="producto">
         
+		<a href="images/de_la_luna (8).jpg"><img src="images/de_la_luna (8).jpg"></a>
+		<a href="images/de_la_luna (7).jpg"><img src="images/de_la_luna (7).jpg"></a>
+		<a href="images/de_la_luna (9).jpg"><img src="images/de_la_luna (9).jpg"></a>
         <a href="images/de_la_luna (5).jpg"><img src="images/de_la_luna (5).jpg"></a>
         <a href="images/de_la_luna (6).jpg"><img src="images/de_la_luna (6).jpg"></a>
         <a href="images/de_la_luna (4).jpg"><img src="images/de_la_luna (4).jpg"></a>
