--- a/quarry.html
+++ b/quarry.html
@@ -65,6 +65,9 @@
 
     <div class="producto">
         
+		<a href="images/quarry (7).jpg"><img src="images/quarry (7).jpg"></a>
+		<a href="images/quarry (8).jpg"><img src="images/quarry (8).jpg"></a>
+		<a href="images/quarry (9).jpg"><img src="images/quarry (9).jpg"></a>
         <a href="images/quarry (3).jpg"><img src="images/quarry (3).jpg"></a>
         <a href="images/quarry (5).jpg"><img src="images/quarry (5).jpg"></a>
 		<a href="images/quarry (1).jpg"><img src="images/quarry (1).jpg"></a>
