--- a/de_la_luna.html
+++ b/de_la_luna.html
@@ -66,6 +66,7 @@
     <div class="producto">
         
 		<a href="images/de_la_luna (8).jpg"><img src="images/de_la_luna (8).jpg"></a>
+		<a href="images/de_la_luna (10).jpg"><img src="images/de_la_luna (10).jpg"></a>
 		<a href="images/de_la_luna (7).jpg"><img src="images/de_la_luna (7).jpg"></a>
 		<a href="images/de_la_luna (9).jpg"><img src="images/de_la_luna (9).jpg"></a>
         <a href="images/de_la_luna (5).jpg"><img src="images/de_la_luna (5).jpg"></a>
