--- a/candelabro_pie.html
+++ b/candelabro_pie.html
@@ -57,7 +57,7 @@
 
     <div class="producto-text">
 
-        <h3>Candelabros</h3>
+        <h3>Candelabro de pie</h3>
         <h5>Aluminio texturado y pulido.</h5>
         <h5>Alto: 130 cm</h5>
 
@@ -65,7 +65,7 @@
 
     <div class="producto">
 		
-		<a href="images/candelabro_pie (2).jpg"><img src="images/candelabro_pie (2).jpg"></a>
+	<a href="images/candelabro_pie (2).jpg"><img src="images/candelabro_pie (2).jpg"></a>
         <a href="images/candelabro_pie (3).jpg"><img src="images/candelabro_pie (3).jpg"></a>
         <a href="images/candelabro_pie (1).jpg"><img src="images/candelabro_pie (1).jpg"></a>
     
