--- a/candelabro_2.html
+++ b/candelabro_2.html
@@ -57,22 +57,16 @@
 
     <div class="producto-text">
 
-        <h3>Magma - Espejo</h3>
-        <h5>Aluminio pulido. Bronce pulido. Ojo de Tigre.</h5>
-        <h5>Alto: 64 cm | Ancho: 82 cm</h5>
+        <h3>Candelabros</h3>
+        <h5>Aluminio texturado y pulido. Bronce pulido.</h5>
+        <h5>Alto: 30 cm</h5>
 
     </div>
 
     <div class="producto">
-        
-        <a href="images/magma (5).jpg"><img src="images/magma (5).jpg"></a>
-		<a href="images/magma (10).jpg"><img src="images/magma (10).jpg"></a>
-		<a href="images/magma (9).jpg"><img src="images/magma (9).jpg"></a>
-        <a href="images/magma (2).jpg"><img src="images/magma (2).jpg"></a>
-		<a href="images/magma (1).jpg"><img src="images/magma (1).jpg"></a>
-        <a href="images/magma (4).jpg"><img src="images/magma (4).jpg"></a>
-        <a href="images/magma (6).jpg"><img src="images/magma (6).jpg"></a>
-        <a href="images/magma (3).jpg"><img src="images/magma (3).jpg"></a>
+		
+		<a href="images/candelabro_2 (1).jpg"><img src="images/candelabro_2 (1).jpg"></a>
+		<a href="images/candelabro_2 (2).jpg"><img src="images/candelabro_2 (2).jpg"></a>
     
       </div>
 
