--- a/coleccion.html
+++ b/coleccion.html
@@ -67,13 +67,22 @@
         	<a href="quarry.html"><img src="images/quarry (7).jpg"></a>
 		</div>
 		<div class="magma">
-        	<a href="magma.html"><img src="images/magma (1).jpg"></a>
+        	<a href="magma.html"><img src="images/magma (9).jpg"></a>
 		</div>
 		<div class="candelabro_pie">
-			<a href="candelabro_pie.html"><img src="images/candelabro_pie (2).jpg"></a>
+			<a href="candelabro_pie_1.html"><img src="images/candelabro_pie_1 (1).jpg"></a>
 		 </div>
 		<div class="candelabros">
-			<a href="candelabros.html"><img src="images/candelabros (6).jpg"></a>
+			<a href="candelabro_1.html"><img src="images/candelabro_1 (3).jpg"></a>
+		</div>
+		<div class="candelabros">
+			<a href="candelabro_2.html"><img src="images/candelabro_2 (1).jpg"></a>
+		</div>
+		<div class="candelabros">
+			<a href="candelabro_3.html"><img src="images/candelabro_3 (1).jpg"></a>
+		</div>
+		<div class="candelabros">
+			<a href="candelabro_4.html"><img src="images/candelabro_4 (1).jpg"></a>
 		</div>
 		<div class="posavasos">
 			<a href="posavasos.html"><img src="images/posavasos (2).jpg"></a>
