--- a/candelabro_4.html
+++ b/candelabro_4.html
@@ -58,8 +58,8 @@
     <div class="producto-text">
 
         <h3>Candelabros</h3>
-        <h5>Aluminio texturado y pulido. Bronce pulido.</h5>
-        <h5>Alto: 30 cm</h5>
+        <h5>Aluminio texturado y pulido.</h5>
+        <h5>Alto: 45 cm</h5>
 
     </div>
 
