--- a/coleccion.html
+++ b/coleccion.html
@@ -57,6 +57,12 @@
 
     <div class="coleccion">
 
+		<!-- <div class="lampara_1">
+			<a href="lampara_2.html"><img src="images/lampara_2 (1).jpg"></a>
+		</div> -->
+		<div class="vallis">
+			<a href="vallis.html"><img src="images/vallis (1).jpg"></a>
+		</div>
 		<div class="de_la_luna">
 			<a href="de_la_luna.html"><img src="images/de_la_luna (10).jpg"></a>
 		</div>
@@ -70,7 +76,7 @@
         	<a href="magma.html"><img src="images/magma (9).jpg"></a>
 		</div>
 		<div class="candelabro_pie">
-		<a href="candelabro_pie_1.html"><img src="images/candelabro_pie_1 (2).jpg"></a>
+			<a href="candelabro_pie_1.html"><img src="images/candelabro_pie_1 (1).jpg"></a>
 		 </div>
 		<div class="candelabros">
 			<a href="candelabro_1.html"><img src="images/candelabro_1 (3).jpg"></a>
@@ -84,11 +90,11 @@
 		<div class="candelabros">
 			<a href="candelabro_4.html"><img src="images/candelabro_4 (1).jpg"></a>
 		</div>
+		<div class="nebula">
+			<a href="nebula.html"><img src="images/nebula (1).jpg"></a>
+		</div>
 		<div class="posavasos">
 			<a href="posavasos.html"><img src="images/posavasos (2).jpg"></a>
-		</div>
-		<div class="nebula">
-       		<a href="nebula.html"><img src="images/nebula (1).jpg"></a>
 		</div>
 
     </div>
