--- a/ice_ice.html
+++ b/ice_ice.html
@@ -57,7 +57,7 @@
 
     <div class="producto-text">
 
-        <h3>Ice Ice - Mesa Auxiliar</h3>
+        <h3>Ice Ice - Mesa auxiliar</h3>
         <h5>Aluminio pulido. Bronce pulido. Vidrio cristalino fundido.</h5>
         <h5>Ø: 32 cm | Alto: 62 cm</h5>
 
