--- a/de_la_luna.html
+++ b/de_la_luna.html
@@ -57,7 +57,7 @@
 
     <div class="producto-text">
 
-        <h3>De La Luna - Mesa Auxiliar</h3>
+        <h3>De La Luna - Mesa auxiliar</h3>
         <h5>Aluminio texturado y pulido. Agata.</h5>
         <h5>Ø: 38 cm | Alto: 60 cm</h5>
 
