--- a/quarry.html
+++ b/quarry.html
@@ -57,7 +57,7 @@
 
     <div class="producto-text">
 
-        <h3>Quarry - Mesa Auxiliar</h3>
+        <h3>Quarry - Mesa auxiliar</h3>
         <h5>Aluminio pulido. Bronce pulido. Mármol pulido/natural.</h5>
         <h5>Ø 36 cm | Alto: 54 cm</h5>
 
