--- a/lampara_2.html
+++ b/lampara_2.html
@@ -57,16 +57,16 @@
 
     <div class="producto-text">
 
-        <h3>Posavasos</h3>
-        <h5>Aluminio texturado y pulido. Bronce pulido.</h5>
-        <h5>Ø: 9 cm</h5>
+        <h3>1 - Lámpara de mesa</h3>
+        <h5>Aluminio texturado y pulido. Agata.</h5>
+        <h5>Ancho: 30 cm | Alto: 30 cm | Profundidad: 5 cm</h5>
 
     </div>
 
     <div class="producto">
-		
-        <a href="images/posavasos (2).jpg"><img src="images/posavasos (2).jpg"></a>
-		<a href="images/posavasos (1).jpg"><img src="images/posavasos (1).jpg"></a>
+        
+		<a href="images/lampara_2 (1).jpg"><img src="images/lampara_2 (1).jpg"></a>
+		<a href="images/lampara_2 (2).jpg"><img src="images/lampara_2 (2).jpg"></a>
     
       </div>
 
