--- a/de_la_luna.html
+++ b/de_la_luna.html
@@ -31,7 +31,7 @@
 				<a href="contact.html">Contacto</a><br>
 				<a href="https://instagram.com/melonisferco"><i class="fa-brands fa-instagram"></i></a> -->
 
-				<h3><a href="index.html">MELONI &nbsp SFERCO</a></h3>
+				<h3><a href="index.html">MELONI <br> SFERCO</a></h3>
 				<h5><a href="coleccion.html">Colección</a></h5>
 				<h5><a href="about.html">Acerca de</a></h5>
 				<h5><a href="contact.html">Contacto</a></h5>
@@ -41,7 +41,7 @@
 		</div>
 
 		<div class="logo"> 
-			<a href="index.html">MELONI &nbsp SFERCO</a>
+			<a href="index.html">MELONI <br> SFERCO</a>
 		</div>
 		<nav>
 			<ul>
