--- a/mesa_cielo.html
+++ b/mesa_cielo.html
@@ -65,7 +65,10 @@
 
     <div class="producto">
         
+		<a href="images/mesa_cielo (4).jpg"><img src="images/mesa_cielo (4).jpg"></a>
+		<a href="images/mesa_cielo (2).jpg"><img src="images/mesa_cielo (2).jpg"></a>
 		<a href="images/mesa_cielo (1).jpg"><img src="images/mesa_cielo (1).jpg"></a>
+		<a href="images/mesa_cielo (3).jpg"><img src="images/mesa_cielo (3).jpg"></a>
     
       </div>
 
