--- a/collection.html
+++ b/collection.html
@@ -61,6 +61,9 @@
 			<a href="lampara_2.html"><img src="images/lampara_2 (1).jpg"></a>
 		</div> -->
 		
+		<div class="de_la_luna">
+		<a href="linua-mirror.html"><img src="images/meloni-sferco-linua-mirror-polished-cast-brass-04.jpg"></a>
+		</div>
 		<div class="mesa_cielo">
 		<a href="cielo-side-table.html"><img src="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-02.jpg"></a>
 		</div>
