--- a/cielo-table-lamp.html
+++ b/cielo-table-lamp.html
@@ -58,7 +58,7 @@
     <div class="producto-text">
 
         <h3>Cielo - Table lamp</h3>
-        <h5>Polished aluminum. Polished marble.</h5>
+        <h5>Polished cast aluminum. Polished Azul Cielo marble.</h5>
         <h5>Ø: 16 cm | Height: 60 cm</h5>
 
     </div>
