--- a/collection.html
+++ b/collection.html
@@ -61,6 +61,10 @@
 			<a href="lampara_2.html"><img src="images/lampara_2 (1).jpg"></a>
 		</div> -->
 		
+		
+		<div class="de_la_luna">
+		<a href="orum-side-table.html"><img src="images/meloni-sferco-orum-side-table-polished-cast-brass-marble-01.jpg"></a>
+		</div>
 		<div class="de_la_luna">
 		<a href="linua-mirror.html"><img src="images/meloni-sferco-linua-mirror-polished-cast-brass-04.jpg"></a>
 		</div>
