--- a/orum-side-table.html
+++ b/orum-side-table.html
@@ -57,26 +57,17 @@
 
     <div class="producto-text">
 
-        <h3>Cielo - Side table</h3>
-        <h5>Polished cast aluminum. Polished Azul Cielo marble.</h5>
-        <h5>Ø: 32 cm | Height: 60 cm</h5>
+        <h3>Orum - Side table</h3>
+        <h5>Polished cast brass. Polished Noir Saint Laurent marble.</h5>
+        <h5>Width: 32 cm | Depth: 25 cm | Height: 58 cm</h5>
 
     </div>
 
     <div class="producto">
         
-		<a href="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-01.jpg">
-			<img src="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-01.jpg" 
-			alt="Side table made by Meloni Sferco, polished cast aluminum and marble, sculptural collectible design"></a>
-		<a href="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-02.jpg">
-			<img src="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-02.jpg" 
-			alt="Side table made by Meloni Sferco, polished cast aluminum and marble, sculptural collectible design"></a>
-		<a href="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-03.jpg">
-			<img src="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-03.jpg" 
-			alt="Side table made by Meloni Sferco, polished cast aluminum and marble, sculptural collectible design"></a>
-		<a href="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-04.jpg">
-			<img src="images/meloni-sferco-cielo-side-table-polished-cast-aluminum-marble-04.jpg" 
-			alt="Side table made by Meloni Sferco, polished cast aluminum and marble, sculptural collectible design"></a>
+		<a href="images/meloni-sferco-orum-side-table-polished-cast-brass-marble-01.jpg">
+			<img src="images/meloni-sferco-orum-side-table-polished-cast-brass-marble-01.jpg" 
+			alt="Side table made by Meloni Sferco, polished cast brass and marble, sculptural collectible design"></a>
     
       </div>
 
