--- a/orum-side-table.html
+++ b/orum-side-table.html
@@ -68,6 +68,11 @@
 		<a href="images/meloni-sferco-orum-side-table-polished-cast-brass-marble-01.jpg">
 			<img src="images/meloni-sferco-orum-side-table-polished-cast-brass-marble-01.jpg" 
 			alt="Side table made by Meloni Sferco, polished cast brass and marble, sculptural collectible design"></a>
+		<a href="images/meloni-sferco-orum-side-table-polished-cast-brass-marble-02.jpg">
+			<img src="images/meloni-sferco-orum-side-table-polished-cast-brass-marble-02.jpg" 
+			alt="Side table made by Meloni Sferco, polished cast brass and marble, sculptural collectible design"></a>
+
+	
     
       </div>
 
